feat(files): improve file metadata response
